--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -18,8 +18,8 @@
       <div class="w-10 h-10 sm:w-12 sm:h-12 bg-gradient-to-br from-teal-300 to-cyan-500 rounded-lg flex items-center justify-center font-bold text-gray-900"></div>
       <span class="font-semibold text-2xl sm:text-4xl">Onchain</span>
     </div>
-    <a href="tel:+12027805987" class="px-6 py-3 bg-teal-400 text-teal-900 font-bold rounded-xl shadow hover:bg-teal-300 transition text-sm sm:text-base">
-      📞 Call Now +1(202) 780-5987
+    <a href="tel:+18327792592" class="px-6 py-3 bg-teal-400 text-teal-900 font-bold rounded-xl shadow hover:bg-teal-300 transition text-sm sm:text-base">
+      📞 Call Now +1(832) 779-2592
     </a>
   </header>
 
@@ -29,7 +29,7 @@
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-tight"> Onchain Help Connect Instantly.<br class="hidden sm:block">One Tap to Call.</h1>
       <p class="mt-4 text-gray-200 text-base sm:text-lg">Skip the waiting — just tap below and start your call instantly with our secure line.</p>
       <div class="mt-8">
-        <a href="tel:+12027805987" class="w-full sm:w-auto block px-12 py-6 bg-teal-400 text-teal-900 text-2xl font-extrabold rounded-2xl shadow-2xl hover:bg-teal-300 transition transform hover:scale-105">📞 +1(202) 780-5987</a>
+        <a href="tel:+18327792592" class="w-full sm:w-auto block px-12 py-6 bg-teal-400 text-teal-900 text-2xl font-extrabold rounded-2xl shadow-2xl hover:bg-teal-300 transition transform hover:scale-105">📞 +1(832) 779-2592</a>
       </div>
       <div class="mt-8 grid grid-cols-1 sm:grid-cols-3 gap-4 text-sm text-gray-300">
         <div class="p-4 bg-gray-900/40 rounded-lg">⚡ Instant connection</div>
@@ -77,14 +77,14 @@
   </footer>
 
   <!-- Hotline Ring Icon -->
-  <div class="hotline-phone-ring-wrap" onclick="window.location.href='tel:+12027805987'">
+  <div class="hotline-phone-ring-wrap" onclick="window.location.href='tel:+18327792592'">
     <div class="hotline-phone-ring">
       <div class="hotline-phone-ring-circle"></div>
       <div class="hotline-phone-ring-circle-fill"></div>
       <div class="hotline-phone-ring-img-circle">📞</div>
     </div>
     <div class="hotline-bar">
-      <a href="tel:+12027805987">Call +1(202) 780-5987</a>
+      <a href="tel:+18327792592">Call +1(832) 779-2592</a>
     </div>
   </div>
 
